# opp

./: README.md
lab1/project/: Matrix.c  Matrix.h  main.c
lab1/project2/: Matrix.c  Matrix.h  main.c  utility.c  utility.h
lab2/: result.txt
lab2/project/: CMakeLists.txt  Matrix.c  main.c
lab2/project_2/: .clang-format  Matrix.c  Matrix.h  main.c
lab3/: Matrix.c  Matrix.h  main.c  share_matrix_MPI.c  share_matrix_MPI.h
lab4/: main.c
lab5/: CMakeLists.txt  main.c
